@@ -78,7 +78,15 @@ android {
     compose = true
     buildConfig = true
   }
-  testOptions { unitTests { isIncludeAndroidResources = true } }
+  testOptions {
+    unitTests {
+      isIncludeAndroidResources = true
+      all {
+        it.maxHeapSize = "2048m"
+        it.jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xmx2048m")
+      }
+    }
+  }
   dependenciesInfo {
     includeInApk = false
     includeInBundle = true
